<?xml version="1.0" encoding="utf-8"?>

<!-- not using this yet -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#105c7b"
            android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="300dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:background="#CDC9C9"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:gravity="center_horizontal"
                      android:orientation="vertical">
            <TextView
                android:id="@+id/setupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="SIE SETUP"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25dp"
                android:fontFamily="sans-serif-medium" />

        </LinearLayout>

        <!-- BEGIN customizable part of setup -->

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/initials"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:fontFamily="sans-serif-light"
                    android:focusableInTouchMode="false" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editInitials"
                    android:textColor="#191970"
                    android:maxLength="2"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/participantCode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:fontFamily="sans-serif-light"
                    android:focusableInTouchMode="false" />

                <Spinner
                    android:id="@+id/participantCodeGroup"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/groupCode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:fontFamily="sans-serif-light"
                    android:focusableInTouchMode="false" />

                <Spinner
                    android:id="@+id/groupCodeGroup"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/sessionCode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:fontFamily="sans-serif-light"
                    android:focusableInTouchMode="false" />

                <Spinner
                    android:id="@+id/sessionCodeGroup"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>


            <TableRow>
                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/conditioncode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:fontFamily="sans-serif-light" />

                <Spinner
                    android:id="@+id/conditionCodeGroup"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/blockcode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:fontFamily="sans-serif-light" />

                <Spinner
                    android:id="@+id/spinBlockCode"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/searchCode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:fontFamily="sans-serif-light"
                    android:focusableInTouchMode="false" />

                <Spinner
                    android:id="@+id/searchCodeGroup"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/arrayCode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:fontFamily="sans-serif-light" />

                <Spinner
                    android:id="@+id/arrayCode"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/ok"
                android:textAppearance="?android:attr/textAppearanceMedium">
            </Button>

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/save"
                android:textAppearance="?android:attr/textAppearanceMedium">
            </Button>

            <Button
                android:id="@+id/exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/exit"
                android:textAppearance="?android:attr/textAppearanceMedium">
            </Button>
        </LinearLayout>

    </LinearLayout>
</ScrollView>